--- a/starter-template/css/style.css
+++ b/starter-template/css/style.css
@@ -12,6 +12,10 @@
 .icon-block .material-icons {
   font-size: inherit; }
 
+label {
+  font-family: "Oswald", sans-serif;
+  color: #6a6a6a42; }
+
 .hero {
   background: url("../assets/header-image.jpg") no-repeat fixed center;
   background-size: cover;
@@ -29,11 +33,26 @@
 .sign-up {
   background-color: #00dfd4; }
 
-.play-vid {
-  background: url("../assets/video-image.jpg") no-repeat;
-  background-size: cover;
-  background-position-y: top;
-  height: 300px; }
+.second-row {
+  margin: 0; }
+  .second-row .play-vid {
+    background: url("../assets/video-image.jpg") no-repeat;
+    background-size: cover;
+    background-position-y: top;
+    height: 300px;
+    padding-top: 80px; }
+    .second-row .play-vid img {
+      width: 100px;
+      text-align: center !important; }
+    .second-row .play-vid p {
+      font-size: 18px;
+      font-family: "Roboto", sans-serif; }
+  .second-row h5 {
+    padding: 0 100px !important; }
+    .second-row h5 i {
+      margin-left: -2%;
+      font-size: 42px;
+      font-weight: bold; }
 
 .plain-text {
   font-family: "Roboto", sans-serif; }
@@ -44,36 +63,76 @@
 
 .info-section {
   border-top: 5px solid;
-  margin: 30px; }
+  margin: 30px;
+  padding: 45px !important;
+  height: 600px; }
+  .info-section h6 {
+    font: "Roboto", sans-serif, bolder;
+    font-weight: 900; }
+  .info-section p {
+    font-family: "Roboto", sans-serif; }
+  .info-section li {
+    font-family: "Roboto", sans-serif;
+    padding: 10px;
+    font-size: 12px; }
+  .info-section i {
+    padding: 10px;
+    font-size: 40px; }
 
 .map-section {
   border-top: 5px solid #092033;
   padding: 30px; }
+  .map-section .text-section h6 {
+    font: "Roboto", sans-serif, bolder;
+    font-weight: 900; }
+  .map-section .text-section p {
+    font-family: "Roboto", sans-serif;
+    color: grey; }
 
 .left-area {
-  height: 300px; }
+  height: 300px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  text-align: left;
+  color: white;
+  display: inline-grid;
+  padding: 50px !important; }
 
-.sign-up-cta {
-  background: url("../assets/signup-image.jpg") no-repeat;
-  background-size: cover;
-  background-position-y: top;
-  height: 300px; }
-
-.enter-email {
-  display: inline-flex; }
-
-/* Overriding Materialize input styling */
-input {
-  background-color: white !important;
-  width: 400px !important;
-  padding: 0 15px !important; }
-
-.sign-up-btn {
-  width: 200px;
-  height: 45px;
-  border: 0 !important; }
+.sign-up-row {
+  margin: 0; }
+  .sign-up-row .sign-up-cta {
+    background: url("../assets/signup-image.jpg") no-repeat;
+    background-size: cover;
+    background-position-y: top;
+    height: 300px;
+    padding: 50px 110px !important; }
+    .sign-up-row .sign-up-cta i {
+      margin-left: -2%;
+      font-size: 42;
+      font-weight: bold; }
+  .sign-up-row .enter-email {
+    display: inline-flex;
+    /* Overriding Materialize input styling */ }
+    .sign-up-row .enter-email input {
+      background-color: white !important;
+      width: 350px !important;
+      padding: 0 15px !important; }
+    .sign-up-row .enter-email .sign-up-btn {
+      width: 200px;
+      height: 45px;
+      border: 0 !important; }
 
 .page-footer {
-  background-color: #092033; }
+  background-color: #092033;
+  padding: 170px 100px; }
+  .page-footer img {
+    filter: invert(1); }
+  .page-footer a {
+    font-size: 12px;
+    font-weight: 100; }
+  .page-footer .lorem-footer {
+    font-size: 11px;
+    line-height: 20px !important; }
 
 /*# sourceMappingURL=style.css.map */
